--- a/class3/style.css
+++ b/class3/style.css
@@ -1,15 +1,4 @@
-#menu {
-    display: flex;
-    flex-direction: column;
-}
-
-.menu-button {
-    border: none;
-    background-color: lightgray;
-    height: 2rem;
-    margin: 0.5rem 0;
-}
-
-.highlight {
-    background-color: lightblue;
+#color {
+    transition-property: background-color;
+    transition-duration: 3s;
 }
